          06-06-18  Bfo     Display the Platform now at the title sequence
          
          06-06-25  Bfo     Ctrl-C handler introduced for UNIX platforms (consio.c)
          06-06-26  Bfo     shandler eliminated again.
          06-06-26  Bfo     <in_m68k_go> visible from outside now: sysdeps.h
          06-06-26  Bfo     <setjmp.h> included
          06-06-26  Bfo     jmp_buf main_env added
          06-06-26  Bfo     Make some more things NET_SUPPORT dependent
          06-06-26  Bfo     SEGV handler introduced, which allows now to catch bus errors !
    3.32  06-??-??  Bfo
    ------------------- 
      
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes
    -   Deadlocking MGR when too small DEFAULTPTYSZ 

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
*/


/* To do: */
/*
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on Linux (over network)
    -   CtrlC/CtrlE support for Linux not yet done
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   "OS9Boot" will be loaded by name, not by reference on RBF images

   (+)  return of d1.l from pipe-systasks
   (+)  passing of d2.l to pipe open
*/